--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "vite": "^3.2.3"
-  }
+  },
+  "proxy": "http://backend:5000"
 }
