--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,11 +5,14 @@ http {
   server {
 
     listen       80;
-    server_name  localhost;
+    server_name  backend;
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;     
+    }
+    location /api {
+      proxy_pass http://backend:5000/api;
     }
   }
 }
