--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "router-tutorial",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://backend:5000",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -19,6 +20,5 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "vite": "^3.2.3"
-  },
-  "proxy": "http://backend:5000"
+  }
 }
