--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,18 +1,28 @@
-events {}
+events { }
 
 http {
   include mime.types;
   server {
+    listen 80 default_server;
+    server_name mbekasportfolio.ddns.net;
+    return 301 https://$server_name$request_uri;
+  }
 
-    listen       80;
-    server_name  backend;
+  server {
+
+    listen 443 default_server;
+    server_name  mbekasportfolio.ddns.net;
+    if ($host != "mbekasportfolio.ddns.net") {
+      return 404;
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;     
     }
     location /api {
-      proxy_pass http://backend:5000/api;
+      proxy_pass http://${BACKEND_SERVICE}:5000/api;
     }
   }
 }
