--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,15 +4,15 @@ http {
   include mime.types;
   server {
     listen 80 default_server;
-    server_name mbekasportfolio.ddns.net;
+    server_name mbekas-portfolio.ddns.net;
     return 301 https://$server_name$request_uri;
   }
 
   server {
 
     listen 443 default_server;
-    server_name  mbekasportfolio.ddns.net;
-    if ($host != "mbekasportfolio.ddns.net") {
+    server_name  mbekas-portfolio.ddns.net;
+    if ($host != "mbekas-portfolio.ddns.net") {
       return 404;
     }
 
